@@ -29,51 +29,32 @@
  */
 // }}}
 
-#ifndef DUBNIUM_ID_H
-#define DUBNIUM_ID_H
+#ifndef DUBNIUM_FUNCTIONBREAKPOINTDIALOG_H
+#define DUBNIUM_FUNCTIONBREAKPOINTDIALOG_H
 
-#include <wx/defs.h>
+#include <wx/dialog.h>
+#include <wx/radiobox.h>
+#include <wx/stattext.h>
+#include <wx/textctrl.h>
 
-// Program-wide window IDs.
-enum {
-	ID_DUBNIUM_LOWEST = wxID_HIGHEST + 1,
-	ID_BREAKPOINTPANEL_ADD_CALL,
-	ID_BREAKPOINTPANEL_ADD_CONDITIONAL,
-	ID_BREAKPOINTPANEL_ADD_EXCEPTION,
-	ID_BREAKPOINTPANEL_ADD_EXPRESSION,
-	ID_BREAKPOINTPANEL_ADD_RETURN,
-	ID_BREAKPOINTPANEL_GRID,
-	ID_BREAKPOINTPANEL_REMOVE,
-	ID_CONNECTIONPAGE,
-	ID_CONNECTIONPAGE_BREAK,
-	ID_CONNECTIONPAGE_OPEN,
-	ID_CONNECTIONPAGE_PANES,
-	ID_CONNECTIONPAGE_RUN,
-	ID_CONNECTIONPAGE_RUN_TO_CURSOR,
-	ID_CONNECTIONPAGE_STEPINTO,
-	ID_CONNECTIONPAGE_STEPOUT,
-	ID_CONNECTIONPAGE_STEPOVER,
-	ID_DEBUGPAGE,
-	ID_FUNCTIONBREAKPOINTDIALOG_CLASS,
-	ID_FUNCTIONBREAKPOINTDIALOG_FUNCTION,
-	ID_FUNCTIONBREAKPOINTDIALOG_TYPE,
-	ID_MAINFRAME,
-	ID_MAINFRAME_SERVER,
-	ID_OUTPUTPANEL_SHOW_ALL,
-	ID_OUTPUTPANEL_SHOW_STDERR,
-	ID_OUTPUTPANEL_SHOW_STDOUT,
-	ID_OUTPUTPANEL_SAVE,
-	ID_PREFDIALOG_FONT,
-	ID_PREFDIALOG_IDEKEY,
-	ID_PREFDIALOG_PORT,
-	ID_PROPERTIESPANEL_TREE,
-	ID_SOURCEPANEL,
-	ID_SOURCEPANEL_RTC,
-	ID_SOURCETEXTCTRL_RUN_TO_HERE,
-	ID_SOURCETEXTCTRL_TOGGLE_BREAKPOINT,
-	ID_STACKPANEL_LIST,
-	ID_STACKPANEL_TOOLTIP,
-	ID_DUBNIUM_HIGHEST
+class FunctionBreakpointDialog : public wxDialog {
+	public:
+		FunctionBreakpointDialog(wxWindow *parent, const wxString &title);
+
+		wxString GetClass() const;
+		wxString GetFunction() const;
+		bool IsMethod() const;
+
+	protected:
+		void OnCancel(wxCommandEvent &event);
+		void OnOK(wxCommandEvent &event);
+		void OnType(wxCommandEvent &event);
+
+		wxTextCtrl *cls, *function;
+		wxStaticText *clsLabel, *functionLabel;
+		wxRadioBox *type;
+
+		DECLARE_EVENT_TABLE()
 };
 
 #endif
