@@ -7,6 +7,7 @@ source = [
 	"BreakpointPanel.cpp",
 	"ConnectionPage.cpp",
 	"DebugPage.cpp",
+	"FunctionBreakpointDialog.cpp",
 	"Location.cpp",
 	"MainFrame.cpp",
 	"OutputPanel.cpp",
