@@ -1,4 +1,5 @@
 Version 0.2.0 (???)
+* Added support for setting class/object method breakpoints.
 * Changed the text on the property dialog button to OK.
 * Fixed segfault on close due to double call to wxSocketBase::Close().
 * Improved property tooltips.
